@@ -1,19 +1,11 @@
 FROM amazoncorretto:21 AS build
+RUN  apt-get update && apt-get -y upgrade && apt-get -y install build-essential
+COPY target/docker-java-1.0-SNAPSHOT.jar /opt/app/app.jar
+COPY dep/ /opt/app/dep/
+COPY aot.cfg /opt/app/
+RUN jaotc --output /opt/app/app-native.so --compile-commands /opt/app/aot.cfg --module java.base --jar /opt/app/app.jar -J-cp -J"./:/opt/app/dep/*" --info
 
-COPY target/docker-java-1.0-SNAPSHOT.jar /app.jar
-
-RUN jdeps --print-module-deps --ignore-missing-deps /app.jar > /deps.info
-
-RUN jlink --compress=2 \
-    --module-path ${JAVA_HOME}/jmods \
-    --add-modules $(cat /deps.info),jdk.crypto.ec \
-    --strip-java-debug-attributes \
-    --no-header-files \
-    --no-man-pages \
-    --output /netty-runtime
-
-FROM gcr.io/distroless/base
-COPY --from=build /netty-runtime /opt/jdk
-ENV PATH=$PATH:/opt/jdk/bin
-COPY --from=build /app.jar /opt/app/app.jar
-CMD ["java", "-showversion", "-jar", "/opt/app/app.jar"]
+FROM amazoncorretto:21 AS runtime
+COPY --from=build  /opt/app/app-native.so /opt/app/
+COPY --from=build  /opt/app/app.jar /opt/app/
+CMD ["java", "-XX:AOTLibrary=/opt/app/app-native.so", "-jar", "/opt/app/app.jar"]
